2003-09-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-key-binding): Don't use `custom-set-default'.
	(w3m-use-favicon): Ditto.
	* w3m-favicon.el (w3m-favicon-size): Ditto.

	* icons/*.xpm: Remove text.

2003-09-17  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-new): Use
	`application/x-www-form-urlencoded' instead of `urlencoded'.
	(w3m-form-parse-and-fontify): Ditto.
	(w3m-form-make-form-data): Use `multipart/form-data' instead of
	`multipart'.
	(w3m-form-mee-new): Likewise.

2003-09-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-e21-toolbar-configurations): Don't modify the
	values for `tool-bar-button-margin' and `tool-bar-button-relief'.

	* w3mhack.el (w3mhack-nonunix-install): Use icons30 for XEmacs.
	(w3mhack-make-package): Use icons30.

	* Makefile.in (SUBDIRS): Add icons30.
	(install-icons30): New rule.
	(install-package, install-package-ja): Use it.

	* icons/*.xpm: Shrink the size of all icons.
	* icons30/: Old icons are here.

2003-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-activate-zmacs-regions): New macro.
	* w3m.el (w3m-next-anchor, w3m-previous-anchor, w3m-next-form,
	w3m-previous-form, w3m-next-image, w3m-previous-image,
	w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url,
	w3m-beginning-of-line, w3m-end-of-line): Use it.

2003-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-backward): Return nil if there is no
	previous element.

	* w3m.el (w3m-view-previous-page): Skip the current page if it
	seems broken; warn if there's no more history.
	(w3m-copy-buffer): Use the current history for the url string if
	the current page seems broken.
	(w3m-goto-url): Use `lexical-let' to pass the history position
	data to the asynchronous w3m process.

2003-09-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el: Move the favicon stuff to w3m-favicon.el.

	* w3m-favicon.el: New file detached from w3m-e21.el.
	(w3m-favicon-type): Adapt it to XEmacs as well.